--- a/automations.old.yaml
+++ b/automations.old.yaml
@@ -1531,6 +1531,7 @@
 # KRISINFORMATION
 
 - alias: 'Krisinformation Alert'
+  id: krisinformation
   initial_state: 'on'
   trigger:
     platform: state
@@ -1541,3 +1542,27 @@
       data_template:
         message: >
           {{states.sensor.krisinformation_stockholm.attributes.messages[0].Headline}} - {{states.sensor.krisinformation_stockholm.attributes.messages[0].Message}} {{states.sensor.krisinformation_stockholm.attributes.messages[0].Web}}
+          
+          
+
+# Turn lights off when we are not home
+- alias: 'Light on when sun is down'
+  id: 'lights when sun is set'
+  initial_state: 'on'
+  trigger:
+    platform: sun
+    event: sunset
+    offset: "-00:45:00"
+  condition:
+    condition: state
+    entity_id: group.devices_adults
+    state: home
+  action:
+    service: light.turn_on
+    entity_id: group.light_hallen
+    service: light.turn_on
+    entity_id: light.vardagsrum_spotlights
+    service: light.turn_on
+    entity_id: light.vardagsrum_trapp
+    service: light.turn_on
+    entity_id: light.vardagsrum_tak
