--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -6,21 +6,13 @@ resources:
     type: module
   - url: /local/custom-lovelace/slideshow-card.js?=1.1.0
     type: js
-#  - url: /local/custom-lovelace/gauge-card.js
-#    type: js
-#  - url: /local/custom-lovelace/long-press.js
-#    type: js
-#  - url: /local/custom-lovelace/custom-lovelace-fullykiosk.js
-#    type: js
-#  - url: /local/custom-lovelace/kiosk-config.js
-#    type: js
   - url: /local/custom-lovelace/fold-entity-row.js?v=6d11d3
     type: js
   - url: /local/custom-lovelace/swipe-card/swipe-card.js?v=2.0.0
     type: module
   - url: /local/custom-lovelace/upcoming-media-card/upcoming-media-card.js
     type: js
-  - url: /local/custom-lovelace/tracker-card.js?v=0.1.5
+  - url: /local/custom-lovelace/tracker-card.js?v=0.2.0
     type: js
   - url: /local/custom-lovelace/card-tools.js?v=297fcc
     type: js
@@ -46,12 +38,6 @@ views:
                       top: 93%
                       left: 20%
                       color: white
-#            - type: state-icon
-#              entity: sensor.battery_oskar
-#              style:
-#                top: 92%
-#                left: 75%
-#                color: white
                   - type: state-label
                     entity: sensor.battery_oskar
                     style:
@@ -73,11 +59,6 @@ views:
                       top: 92%
                       left: 20%
                       color: white
-#            - type: state-icon
-#              entity: sensor.battery_bella
-#              style:
-#                top: 91%
-#                left: 75%
                   - type: state-label
                     entity: sensor.battery_bella
                     style:
@@ -220,65 +201,6 @@ views:
             entity: sensor.philio_technology_corporation_phpat02beu_multisensor_2in1_temperature
             min: -50
             max: 50
-#      - id: 37279816181f442eac853b03c0473101  # Automatically created id
-#        type: entities
-#        show_header_toggle: false
-#        entities:
-#          - input_boolean.guest_mode
-#      - type: custom:swipe-card
-#        parameters:
-#          spaceBetween: 8
-#          scrollbar:
-#            hide: false
-#            draggable: true
-#            snapOnRelease: true
-#        cards:
-#          - type: sensor
-#            entity: sensor.fibaro_system_unknown_type0c02_id1003_temperature
-#            name: Övervåning
-#            line_width: 8
-#            line_color: '#53cc79'
-#          - type: sensor
-#            entity: sensor.fibaro_system_unknown_type0c02_id1003_temperature_2
-#            name: Entréplan
-#            line_color: '#53cc79'
-#            line_width: 8
-#          - type: sensor
-#            entity: sensor.philio_technology_corporation_phpat02beu_multisensor_2in1_temperature
-#            name: Källaren
-#            line_color: '#53cc79'
-#            line_width: 8
-#          - type: sensor
-#            entity: sensor.luftdaten_11774_temperature
-#            name: Utomhus
-#            line_color: '#53cc79'
-#            line_width: 8
-#        card:
-#      - id: ba6cbd7052d24647a88991725beb26b0  # Automatically created id
-#        type: custom:slideshow-card
-#        arrow_color: var(--primary-text-color)
-#        arrow_opacity: .7
-#        cards:
-#          - type: gauge
-#            title: Övervåning
-#            entity: sensor.fibaro_system_unknown_type0c02_id1003_temperature_2
-#            min: -50
-#            max: 50
-#          - type: gauge
-#            title: Entrén
-#            entity: sensor.fibaro_system_unknown_type0c02_id1003_temperature_3
-#            min: -50
-#            max: 50
-#          - type: gauge
-#            title: Källaren
-#            entity: sensor.philio_technology_corporation_phpat02beu_multisensor_2in1_temperature
-#            min: -50
-#            max: 50
-#          - type: gauge
-#            title: Utomhus
-#            entity: sensor.luftdaten_temperature
-#            min: -50
-#            max: 50
   - title: Köket
     id: köket
     cards:
@@ -399,36 +321,20 @@ views:
         entity: media_player.kallare_mini
         artwork: cover
         show_source: true
-      - type: custom:swipe-card
-        parameters:
-          spaceBetween: 8
-          scrollbar:
-            hide: false
-            draggable: true
-            snapOnRelease: true
+      - type: custom:slideshow-card
+        arrow_color: var(--primary-text-color)
+        arrow_opacity: .7
         cards:
-          - type: sensor
+          - type: gauge
+            title: Temperatur
             entity: sensor.philio_technology_corporation_phpat02beu_multisensor_2in1_temperature
-            name: Temperatur
-            line_width: 8
-            line_color: '#FF6384'
-          - type: sensor
+            min: -50
+            max: 50
+          - type: gauge
+            title: Luftfuktighet
             entity: sensor.philio_technology_corporation_phpat02beu_multisensor_2in1_relative_humidity
-            name: Luftfuktighet
-            line_color: '#36A2EB'
-            line_width: 8
-#    type: custom:swipe-card
-#    cards:
-#      - type: sensor
-#        entity: sensor.philio_technology_corporation_phpat02beu_multisensor_2in1_temperature
-#        name: Temperatur
-#        line_width: 8
-#        line_color: '#FF6384'
-#      - type: sensor
-#        entity: sensor.philio_technology_corporation_phpat02beu_multisensor_2in1_relative_humidity
-#        name: Luftfuktighet
-#        line_color: '#36A2EB'
-#        line_width: 8
+            min: 0
+            max: 100
   - title: Sovrummet
     id: sovrummet
     cards:
