--- a/automations/lights/turn_off_porch_lights_when_no_motion.yaml
+++ b/automations/lights/turn_off_porch_lights_when_no_motion.yaml
@@ -1,4 +1,4 @@
-alias: Släck bänkbelysningen efter 7 min vid sista rörelse
+alias: Släck altanbelysningen efter 7 min vid sista rörelse
 initial_state: 'on'
 trigger:
   platform: state
