--- a/automations/notify/lights_unavailble.yaml
+++ b/automations/notify/lights_unavailble.yaml
@@ -26,7 +26,7 @@ trigger:
   - light.altan_lampa
   to: unavailable
 action:
-  - service: notify.adults
+  - service: notify.telegram_oskar
     data_template:
       title: 'Home Assistant'
       message: >
