--- a/components/android_ip_webcam/android_ip_webcam.yaml
+++ b/components/android_ip_webcam/android_ip_webcam.yaml
@@ -1,6 +1,8 @@
   host: !secret android_ip_webcam_ip
+  name: Hall
   username: !secret android_ip_webcam_username
   password: !secret android_ip_webcam_password
   port: !secret android_ip_webcam_port
   switches:
     - night_vision
+    - overlay
