--- a/components/packages/recorder.yaml
+++ b/components/packages/recorder.yaml
@@ -1,4 +1,4 @@
 recorder:
-  db_url: sqlite:////config/home-assistant_v2.db
-  purge_interval: 2
+  db_url: !secret mariadb_url
+  purge_interval: 1
   purge_keep_days: 7
