--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -2,7 +2,7 @@ name: Hem
 resources:
   - url: /local/custom-lovelace/monster-card.js
     type: js
-  - url: /local/custom-lovelace/mini-media-player-bundle.js?v=0.9.8
+  - url: /local/custom-lovelace/mini-media-player-bundle.js?v=1.0.0
     type: module
   - url: /local/custom-lovelace/slideshow-card.js?=1.1.0
     type: js
@@ -12,7 +12,7 @@ resources:
     type: module
   - url: /local/custom-lovelace/upcoming-media-card/upcoming-media-card.js
     type: js
-  - url: /local/custom-lovelace/tracker-card.js?v=0.2.0
+  - url: /local/custom-lovelace/tracker-card.js?v=0.3.0
     type: js
   - url: /local/custom-lovelace/card-tools.js?v=297fcc
     type: js
@@ -153,6 +153,11 @@ views:
               - switch.hall_night_vision
               - switch.hall_overlay
             camera_image: camera.hall
+          - type: picture-glance
+            title: Vardagsrums kamera
+            entities: 
+              - light.vardagsrum_tak
+            camera_image: camera.vardagsrum
       - id: 3870fdc794274f17b84dd6ced631b737  # Automatically created id
         type: iframe
         url: https://embed.windy.com/embed2.html
