:hammer: changed alarm_disarm.yaml to initial_state on

--- a/automations/house/alarm/alarm_disarmed.yaml
+++ b/automations/house/alarm/alarm_disarmed.yaml
@@ -1,5 +1,6 @@
 alias: '[Alarm] Disarmed'
 id: alarm_disarmed
+initial_state: 'on'
 trigger:
   platform: state
   entity_id: alarm_control_panel.kernehed_manison
