--- a/components/packages/zwave.yaml
+++ b/components/packages/zwave.yaml
@@ -1,3 +1,3 @@
-zwave:
-  usb_path: /dev/ttyACM0
-  network_key: !secret network_key
+#zwave:
+#  usb_path: /dev/ttyACM0
+#  network_key: !secret network_key
