--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,10 +1,10 @@
 name: Hem
 resources:
-  - url: /local/custom-lovelace/text-element.js?v=0
+  - url: /local/custom-lovelace/text-element.js?v=0.0.2
     type: js
   - url: /local/custom-lovelace/monster-card.js
     type: js
-  - url: /local/custom-lovelace/mini-media-player-bundle.js?v=1.0.0
+  - url: /local/custom-lovelace/mini-media-player-bundle.js?v=1.0.1
     type: module
   - url: /local/custom-lovelace/slideshow-card.js?=1.1.0
     type: js
@@ -14,9 +14,9 @@ resources:
     type: module
   - url: /local/custom-lovelace/upcoming-media-card/upcoming-media-card.js
     type: js
-  - url: /local/custom-lovelace/tracker-card.js?v=0.3.0
+  - url: /local/custom-lovelace/tracker-card.js?v=0.3.2
     type: js
-  - url: /local/custom-lovelace/card-tools.js?v=297fcc
+  - url: /local/custom-lovelace/card-tools.js?v=97d985
     type: js
   - url: /local/custom-lovelace/krisinfo.js?=0.0.1
     type: js
@@ -525,14 +525,6 @@ views:
             items:
               - sensor.uptime_router
               - sensor.installerad_routeros
-          - type: custom:fold-entity-row
-            head:
-              entity: binary_sensor.router_server
-            group_config:
-              icon: mdi:router
-            items:
-              - sensor.uptime_router_server
-              - sensor.installerad_routeros_server
       - id: b8e18e8750224f58b404d0f2e644529a  # Automatically created id
         type: entities
         title: Ubiquiti
