--- a/automations/lights/turn_on_basement_lights_when_motion.yaml
+++ b/automations/lights/turn_on_basement_lights_when_motion.yaml
@@ -1,9 +1,18 @@
 alias: Tänd källare lamporna när rörelse i källaren
-initial_state: 'off'
+initial_state: 'on'
 trigger:
   platform: state
   entity_id: binary_sensor.kallaren_motion_sensor
   to: 'on'
+condition:
+  condition: and
+  conditions:
+    - condition: state
+      entity_id: remote.harmony_hub
+      state: 'off'
+    - condition: state
+      entity_id: group.light_kallaren
+      state: 'off'
 action:
   service: light.turn_on
   entity_id: group.light_kallaren
