:hammer: some updates for 0.92.0

--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -601,7 +601,7 @@ views:
          - gråbo
          - gräs
          - hassel
-         - Sälg / Vide
+         - Sälg / vide
          - Ambrosia
   - title: Media
     id: media
